tests/assignement/to_builtin.rz
var bool = 1 // error: missing variable name after 'var' keyword in declaration
var float = 1 // error: missing variable name after 'var' keyword in declaration
var int = 1 // error: missing variable name after 'var' keyword in declaration
struct Foo {
    fn init() {
        self = 4 // error: invalid assignment target
    }
}
var str = 1 // error: missing variable name after 'var' keyword in declaration
